--- a/resources/gato-template-wittliff/css/_header.scss
+++ b/resources/gato-template-wittliff/css/_header.scss
@@ -196,7 +196,8 @@ strong {
               }
             }
             .simplemenu-subitems {
-              display: block;
+              /* unnecessary as long as we use velocity 'slideDown' animation */
+              /* display: block; */
             }
           }
           > a {
@@ -240,7 +241,8 @@ strong {
         content: $fa-var-times;
       }
       .main-menu-panel {
-        display: block;
+        /* unnecessary as long as we use velocity 'slideDown' animation */
+        /* display: block; */
       }
     }
     .texas-state, .social-media, .search-link {
